# toy_iso_paintball

./: .gitignore  CMakeLists.txt  ISOMETRIC.md  LICENSE  README.md  build.bat
data/background/: background.ase
data/levels/: C1L1.ipl  C1L10.ipl  C1L2.ipl  C1L3.ipl  C1L4.ipl  C1L5.ipl  C1L6.ipl  C1L7.ipl  C1L8.ipl  C1L9.ipl  demo_0.ipl  demo_1.ipl
data/meta/: app.json  baldy.json  baldy_spawner.json  bounce_pad.json  campaign_0.json  decal_paintball.json  demo.json  editor.json  enemy_charger.json  enemy_range.json  level_exit.json  lever_platform_mover.json  lever_purple.json  lever_white.json  pickup_ammunition.json  projectile_paintball.json  surface_icy.json  thumper.json  tile_grass.json  tile_platform.json  tile_water.json  ui.json
data/sfx/: License.txt  notes.txt
data/sprites/: cleric.ase  emotes.ase  fighter.ase  mage.ase  notes.txt  paintball_decals.ase  props.ase  tiles.ase  ui.ase  ui_borders.ase
src/: main.c
src/assets/: assets.c  assets.h
src/common/: macros.h  math.c  math.h  memory.c  memory.h  priority_queue.h  string.c  string.h  types.h
src/game/: audio.c  audio.h  draw.c  draw.h  editor.c  editor.h  editor_ui.c  editor_ui.h  entity.c  entity.h  entity_grid.c  entity_grid.h  game.c  game.h  game_ui.c  game_ui.h  input.c  input.h  ui.c  ui.h
src/libs/empyreanx/pico/: pico_ecs.h
src/libs/nicbarker/clay/: clay.h
src/libs/nothings/stb/: stb_textedit.h
src/util/: perf.c  perf.h  util.c  util.h
